Fixed layout issues

--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -11,6 +11,7 @@
     background: darkslategrey;
     padding: 10px;
     box-sizing: border-box;
+    width: 280px;
 }
 
 .form {
@@ -19,7 +20,7 @@
     margin-bottom: 10px;
     width: 100%;
     align-items: center;
-    background: #10e310;
+    background: #037c03;
     box-sizing: border-box;
 }
 
